# muon_lab

./: .clang-format  .clang_complete  .gitignore  .snitch.yaml  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  gui.mac  init_vis.mac  main.cpp  vis.mac  wav.cpp  waveform_generator.cpp
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  ScintillatorHit.hh  ScintillatorSD.hh  SiPM.hh  SiPMHit.hh  SiPMMessenger.hh  SiPMSD.hh  pft.hpp
macros/: default_gps.mac  gps_setup.mac  rays.mac  run_sipm.mac  runs.mac
src/: ActionInitialization.cpp  DetectorConstruction.cpp  DetectorMessenger.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  ScintillatorHit.cpp  ScintillatorSD.cpp  SiPM.cpp  SiPMHit.cpp  SiPMMessenger.cpp  SiPMSD.cpp
